# gotham-service

./: .travis.yml  Cargo.toml  README.md
middleware/diesel/: .gitignore  Cargo.toml
migrations/2018-03-17-231603_create_products/: up.sql
src/: handlers.rs  lib.rs  main.rs
src/db/: mod.rs  models.rs  utils.rs
