[package]
name = "gotham-service"
version = "0.1.0"
authors = ["jman"]

[dependencies]
gotham = "0.2.0"
gotham_derive = "0.2.0"
hyper = "0.11.22"
futures = "0.1.18"
mime = "0.3.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

diesel = { version = "1.1.1", features = ["sqlite"] }
diesel_migrations = { version = "1.1.0", features = ["sqlite"] }
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
gotham_middleware_diesel = { path = "middleware/diesel" }

# AMQP
# amqp = "0.1.1"

# [[test]]
# name = "mytests"
# path = "src/tests.rs"
